--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,126 @@
-/* Reset some default styles */
+/* Estilos globales*/
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-#menu {
-    background: #333;
-    color: #fff;
-    height: 50px;
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #333;
+    color: white
+}
+
+#menu ul{
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    position: relative;
-}
+    justify-content: space-between;
+    gap: 50px;
+    
 
-#menu ul li a {
-
-
-    font-size: 16px;
-
-    padding: 10px 15px;
-    border-radius: 10px;
-    transition: background 0.3s;
 }
-
-#menu ul li a:hover {
-    background: #555;
-    width: fit-content;
-    height: fit-content;
+#menu ul div{
+    display: flex;
+    justify-content: space-between;
+    
+    gap: 50px;
+    list-style: none;
+    margin: 20px;
+    
+    
+    
 }
-
-#responsive-menu {
-    display: none;
-}
-
-label[for="responsive-menu"] {
-    display: none;
-    font-size: 20px;
-    cursor: pointer;
-    color: #fff;
-}
-
-#menu ul, #menu li {
-    margin: 0 auto;
-    padding: 0;
-    list-style: none
-}
-#menu ul {
-    width: 100%;
-    text-align: left;
-}
-#menu li {
-    display: inline-block;
-    position: relative;
-}
-#menu a {
-    display: block;
-    line-height: 45px;
-    padding: 0 14px;
+#menu ul div li a{
     text-decoration: none;
-    color: #FFFFFF;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
+    
 }
-#menu a.dropdown-arrow:after {
-    content: "\25BE";
-    margin-left: 5px;
+#menu ul div li a:hover{
+    color: #ff0000;
+    transition: 0.3s;
+    
 }
-#menu input {
-    display: none;
-    margin: 0;
-    padding: 0;
-    height: 45px;
+
+
+#menu ul a img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    border-color: none;
+    margin: 15px;
+}
+#menu ul a img:hover {
+    transform: scale(1.1);
+    transition: 0.4s;
+    
+}
+#menu h1{
+    font-family: Cormorant Garamond, serif;
+    font-size: 30px;
+    text-align: left;
+    margin-top: 45px;
+    padding-left: 20px;
+    position: relative;
+    
+}
+#texto1{
+    display: block;
+    font-weight: 400;
+}
+#texto2{
+    display: block;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-left: 50px;
+}
+
+.main-index{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.tarjeta1{
     width: 100%;
-    opacity: 0;
-    cursor: pointer
+    max-width: 800px;
+
+    height: 250px;
+    margin: 0 auto;
+    background-image: url(../assets/img/torinobg1.jpg);
+    background-position: center bottom ;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0px 4px 20px rgba(0,0,0,0.5);
+
 }
-#menu label {
-    display: none;
-    line-height: 45px;
-    text-align: center;
+tarjeta1 h2{
     position: absolute;
-    left: 35px
-}
-#menu label:before {
-    font-size: 1.6rem;
-    color: #ffffff;
-    content: "\2261"; /* Cambiar el ícono a "≡" */
-    margin-left: 0px;
+    
+    
+    display: block;
 }
 
-@media screen and (max-width: 400px){
-    #menu {
-        position: relative;
-    }
 
-    #menu ul {
-        background: #444444;
-        position: absolute;
-        top: 45px; 
-        left: 0px;
-        right: 0px;
-        z-index: 3;
-        display: none; 
-        flex-direction: column;
-        padding: 20px 0px;
-        border-radius: 0px 0px 10px 10px;
-    }
+.index-header{
+    width: 100%;
+    height: 80vh;
+    background-image: url(../assets/img/torinobg6.jpg);
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+    right: 0;
+    display: flex;
+    
+    padding: 10px ;
+    text-align: center;
+    background-color: #333;
+    background-color: (0, 0, 0, 0.5);
+}
 
-    #menu ul li {
-        display: block;
-        text-align: left;
-    }
+@media screen and (max-width: 750px){
+ 
 
-    #menu input {
-        display: none;
-    }
-    #menu label {
-        display: block;
-        font-size: 20px;
-        cursor: pointer;
-        line-height: 45px;
-    }
-    #menu input:checked + label:before {
-        content: "\00d7"; /* Cambiar el ícono a "X" cuando esté abierto */
-    }
-
-    #menu input:checked ~ ul {
-        display: flex; /* muestra el menu al hacer click */
-    }
 }
 
 
