--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,23 @@ body {
     color: white
 }
 
+.index-header{
+    width: 100%;
+    height: 90vh;
+    background-image: url(../assets/img/torinobg6.jpg);
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+    right: 0;
+    display: flex;
+    
+    border-radius: 50px 50px 50px 50px;
+    overflow: hidden;
+    text-align: center;
+    background-color: #333;
+    background-color: (0, 0, 0, 0.5);
+}
+
 #menu ul{
     display: flex;
     justify-content: space-between;
@@ -29,15 +46,26 @@ body {
     
     
 }
+#menu ul div li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: 10px;
+
+}
+#menu ul div li:hover{
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    padding: 10px;
+    
+    transition: 0.3s;
+    cursor: pointer;
+}
 #menu ul div li a{
     text-decoration: none;
     color: white;
     font-size: 20px;
-    
-}
-#menu ul div li a:hover{
-    color: #ff0000;
-    transition: 0.3s;
     
 }
 
@@ -66,57 +94,40 @@ body {
 #texto1{
     display: block;
     font-weight: 400;
+    text-shadow: 6px 6px 12px rgba(0,0,0,0.3);
+
+    
 }
 #texto2{
     display: block;
     font-weight: 700;
     margin-top: 5px;
     margin-left: 50px;
+    text-shadow: 6px 6px 12px rgba(0,0,0,0.3);
 }
-
-.main-index{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
 }
-.tarjeta1{
+.grid-container img{
     width: 100%;
-    max-width: 800px;
-
-    height: 250px;
-    margin: 0 auto;
-    background-image: url(../assets/img/torinobg1.jpg);
-    background-position: center bottom ;
-    overflow: hidden;
-    position: relative;
-    box-shadow: 0px 4px 20px rgba(0,0,0,0.5);
-
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
 }
-tarjeta1 h2{
-    position: absolute;
+.grid-container img:hover{
+    transform: scale(1.05);
+    transition: 0.4s;
+}
+
+.index-footer{
     
-    
-    display: block;
 }
 
 
-.index-header{
-    width: 100%;
-    height: 80vh;
-    background-image: url(../assets/img/torinobg6.jpg);
-    background-size: contain;
-    background-position: right;
-    background-repeat: no-repeat;
-    right: 0;
-    display: flex;
-    
-    padding: 10px ;
-    text-align: center;
-    background-color: #333;
-    background-color: (0, 0, 0, 0.5);
-}
+
 
 @media screen and (max-width: 750px){
  
