--- a/css/style.css
+++ b/css/style.css
@@ -122,10 +122,10 @@ body {
     transition: 0.4s;
 }
 
-.index-footer section{
+.index-footer .seccion-contacto{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 20px;
 }
@@ -137,12 +137,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: center;
+    align-items: left;
     margin: 20px 20px 20px 0;
 }
 .maps-container div p{
     font-size: 12px;
     margin-bottom: 10px;
+    
     text-align: left;
 }
 .maps-container a{
@@ -172,7 +173,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: center;
+    align-items: left;
     margin: 20px 20px 20px 0;
 }
 .tel-container div p{
@@ -207,7 +208,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: center;
+    align-items: left;
     margin: 20px 20px 20px 0;
 }
 .email-container div p{
@@ -232,6 +233,33 @@ body {
 .email-container a img:hover{
     transform: scale(1.1);
     transition: 0.4s;
+}
+
+.index-footer .seccion-redes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+
+}
+.redes-container{
+    display: flex;
+    flex-direction: row;
+}
+.redes-container a img{
+    width: 20px;
+    height: 20px;
+    margin: 15px;
+}
+.redes-container a img:hover{
+    transform: scale(1.2);
+    transition: 0.4s;
+}
+.seccion-redes div p{
+    font-size: 12px;
+    margin-bottom: 10px;
+    text-align: left;
 }
 
 
