--- a/style.scss
+++ b/style.scss
@@ -7,14 +7,17 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #333;
+    
     color: white
+}
+footer{
+    background-color: #c4b6b6;
 }
 
 .index-header{
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/img/torinobg6.jpg);
+    background-image: url(./assets/img/torinobg6.jpg);
     
     background-size: contain;
     background-position: right;
@@ -28,6 +31,10 @@ body {
     background-color: (0, 0, 0, 0.5);
     
 }
+
+
+
+
 .galeria-header {
     
     text-align: center;
@@ -39,12 +46,14 @@ body {
     flex-direction: column;
     align-items: center;
     
-    background-color: #333;
+    
+    
+    background-color: #908181;
 }
 
 .contenedor-galeria{
     max-width: 1200px;
-    
+    margin: 5px;
 }
 .col-md-4 img{
     width: 400px;
@@ -56,10 +65,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    
     gap: 20px;
     padding: 20px;
+    margin: 10px;
     position: relative;
+}
+.card-body ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: .625rem;
 }
 .card-text{
     display: flex;
@@ -78,13 +94,16 @@ body {
 #menu ul .grupo-menu li a {
     display: flex;
     justify-content: space-between;
-    
+    color: white;
     gap: 50px;
     list-style: none;
     margin: 20px;
     
     
     
+}
+#grupo-menu ul li a {
+    color: white;
 }
 #menu ul .grupo-menu li {
     display: flex;
@@ -95,7 +114,7 @@ body {
 
 }
 #menu ul .grupo-menu li a:hover{
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(182, 165, 165, 0.7);
     border-radius: 10px;
     padding: 10px;
     
@@ -104,7 +123,7 @@ body {
 }
 #menu ul li a{
     text-decoration: none;
-    color: white;
+    color: rgb(8, 8, 8);
     font-size: 20px;
     
 }
@@ -134,6 +153,7 @@ body {
 #texto1{
     display: block;
     font-weight: 400;
+    color: white;
     text-shadow: 6px 6px 12px rgba(0,0,0,0.3);
 
     
@@ -143,6 +163,7 @@ body {
     font-weight: 700;
     margin-top: 5px;
     margin-left: 50px;
+    color: white;
     text-shadow: 6px 6px 12px rgba(0,0,0,0.3);
 }
 .grid-container{
@@ -165,7 +186,7 @@ body {
 .index-footer .seccion-contacto{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 10px;
 }
@@ -290,7 +311,7 @@ body {
 .redes-container a img{
     width: 20px;
     height: 20px;
-    margin: 15px;
+    margin: 10px;
 }
 .redes-container a img:hover{
     transform: scale(1.2);
@@ -302,7 +323,7 @@ body {
     text-align: left;
 }
 .linea-hr{
-    width: 80%;
+    width: 90%;
     height: 3px;
     margin-left: 50px;
     background-color: #41362f;
@@ -313,7 +334,7 @@ body {
 
 
 @media screen and (max-width: 750px){
- 
+
 
 }
 
